# compiz-gnome

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  requirements.txt  setup.py
.planning/: CHECKLIST.md  CONSTITUTION.md  PROJECT.md  ROADMAP.md  STATE.md  continue-here.md
.planning/waves/: wave_001_wave_001_math_engine_analysis.md  wave_002_wave_002_secondary_plugins_analysis.md  wave_003_wave_003_master_doc_finalization.md  wave_004_wave_004_1_water_plugin_analysis.md  wave_005_wave_004_2_freewins_plugin_analysis.md  wave_006_wave_004_3_ring_plugin_analysis.md  wave_007_wave_004_4_shift_plugin_analysis.md  wave_008_wave_004_5_animation_plugin_analysis.md  wave_009_wave_004_6_secondary_effects_and_x11_gap_analysis.md  wave_010_wave_005_1_engine_core_ipc_plumbing.md  wave_011_wave_005_2_water_physics_compute_pass.md  wave_012_wave_005_3_gjs_extension_optics_sync.md  wave_013_wave_006_1_wobbly_blur_effects_and_tests.md
compiz-dmabuf/: compiz-dmabuf.c  compiz-dmabuf.h  meson.build
docs/: MASTER_REFERENCE.md  compiz_architecture.md  compiz_architecture_a550b.md  compiz_vs_gnome_gap_analysis.md  math_animation_full_analysis.md  math_animation_full_analysis_a550b.md  math_blur_analysis_a550b.md  math_burn_analysis_a550b.md  math_cube_analysis.md  math_fade_animation_analysis_a550b.md  math_freewins_analysis.md  math_grid_analysis.md  math_ring_analysis.md  math_rotate_analysis.md  math_scale_expo_analysis.md  math_secondary_effects_analysis.md  math_shift_analysis.md  math_switcher_analysis.md  math_wall_analysis.md  math_water_analysis.md  math_water_analysis_a550b.md  math_wobbly_analysis_a550b.md  math_zoom_analysis.md  universal_engine_architecture.md  universal_engine_architecture_a550b.md
proto/: water.proto
schemas/: ipc.fbs  org.gnome.shell.extensions.compiz-gnome.gschema.xml
shaders/: kawase_up.frag  magic_lamp.tesc  magnifier.comp  planar_reflection.frag  ring_orbit.vert  water_effect.frag  water_normals.comp  water_sim.comp  wobbly_bezier.vert  wobbly_spring.comp
tests/: manual_visual_test.md  run_integration_tests.sh  test_fixed_timestep.cpp  test_ipc_message.cpp  test_new_effects.cpp
(+48 files in other folders)
